tests/semantic/valid/80_i11_case_ok.hulk
type A() { }
type B() inherits A() { }
type C() inherits B() { }

case new C() of {
    a:A -> print("A");
    b:B -> print("B");
};
