tests/semantic/invalid/72_g_case_no_branch.hulk
type A() { }
type B() inherits A() { }
type C() inherits A() { }

let x: C = new C() in case x of b:B -> print(1);
